# unn-practice

./: CMakeLists.txt  README.md
NamedPipeLibrary/: CMakeLists.txt  NamedPipeLibrary.hpp
NamedPipeLibrary/include/: ClientApp.hpp  NamedPipeTransport.hpp  Protocol.hpp  ServerApp.hpp
NamedPipeLibrary/src/: ClientApp.cpp  NamedPipeTransport.cpp  Protocol.cpp  ServerApp.cpp
SharedMemory-lib/: CMakeLists.txt
SharedMemory-lib/Client/: CMakeLists.txt
SharedMemory-lib/Client/include/: Client.hpp
SharedMemory-lib/Client/src/: Client.cpp
SharedMemory-lib/Core/: CMakeLists.txt
SharedMemory-lib/Core/include/: Protocol.hpp  SharedMemoryCore.hpp
SharedMemory-lib/Core/src/: SharedMemoryCore.cpp
SharedMemory-lib/Server/: CMakeLists.txt
SharedMemory-lib/Server/include/: Server.hpp
SharedMemory-lib/Server/src/: Server.cpp
configuration/: CMakeLists.txt
configuration/src/: configuration.cpp
configuration/systemd/: configuration.conf  configuration.service
daemon-lib/: CMakeLists.txt
daemon-lib/include/: dconfig.hpp  dlog.hpp
fault/: CMakeLists.txt
fault/src/: fault.cpp
fault/systemd/: fault.conf  fault.service
radio/: CMakeLists.txt  radio.conf
radio/src/: radio.cpp
radio/systemd/: radio.service
socket-lib/: CMakeLists.txt
socket-lib/include/: Client.h  Protocol.h  Server.h  Socket.h  Socket_Server.h  Socket_Transport.h
socket-lib/src/: Socket.cpp
