project(transport.socket VERSION 1.0.0 LANGUAGES CXX)
include(GNUInstallDirs)

set(TRANSPORT_SOCKET_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(TRANSPORT_SOCKET_LIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB TRANSPORT_SOCKET_LIB_HEADERS ${TRANSPORT_SOCKET_LIB_INCLUDE_DIR}/*.h)
file(GLOB TRANSPORT_SOCKET_LIB_SOURCE ${TRANSPORT_SOCKET_LIB_SOURCE_DIR}/*.cpp)

add_library(transport.socket SHARED ${TRANSPORT_SOCKET_LIB_SOURCE} ${TRANSPORT_SOCKET_LIB_HEADERS} ${TRANSPORT_SOCKET_LIB_PROTOCOL_HEADER})

target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
target_compile_options(${PROJECT_NAME} PRIVATE "-Wall")

target_include_directories(${PROJECT_NAME} PUBLIC ${TRANSPORT_SOCKET_LIB_INCLUDE_DIR})

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})

install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
